...
    val remoteScores by viewModel.remoteScores.collectAsState()
    var mode by remember { mutableStateOf(false) } // false = room true = retrofit
    var urlValid by remember { mutableStateOf(false) }
    var url by remember { mutableStateOf("") }
    Column(modifier = Modifier.fillMaxSize()) {//TODO hack for test screenshot, otherwise shrinkfit??
        Button(onClick = { viewModel.insertRoomTestData() }) {
            Text("Insert Room test data")
        }
        Button(onClick = { viewModel.insertRetrofitTestData() }) {
            Text("Insert Retrofit test data")
        }
        Button(onClick = { mode = !mode }) {
            Text("Use ${if(mode) "room" else "retrofit"}")
        }
        Text("Using ${if(!mode) "room" else "retrofit"}")
        if(mode) {
...
